# cambium

./: .editorconfig  .gitattributes  .gitignore  .gitleaks.toml  .gitmodules  AGENTS.md  Cargo.toml  LICENSE  NOTICE  PUBLISHING.md  README.md  VERSIONS
.claude/: settings.json
.github/: dependabot.yml
.planning/: README.md
conformance/: manifest.toml
docs/: README.md  architecture.md  cambium-kickoff.md  conformance-coverage-catalog.json  conformance-coverage-catalog.md  conformance.md  faq.md  gaps-analysis-2026-06-20.md  glossary.md  go-quality-followups.md  handoff-codegen-final.md  handoff-codegen-phase5.md  handoff-codegen-slices-run.md  handoff-codex-2026-06-17.md  handoff-codex-2026-06-20.md  handoff-go-codegen.md  handoff-go-data-layer.md  handoff-go-parity-phase4.md  handoff-go-parity.md  handoff-overnight-phase1.md  handoff-overnight-phase2.md  handoff-overnight-phase3.md  handoff-overnight.md  juniper-construct-census.md  kimi-codegen-final-prompt.md  kimi-codegen-slices-prompt.md  kimi-conformance-authoring-prompt.md  kimi-followup-prompt.md  kimi-go-codegen-prompt.md  kimi-go-data-layer-prompt.md  kimi-go-diff-merge-prompt.md  kimi-go-mutation-prompt.md  kimi-go-parity-prompt.md  kimi-kickoff-prompt.md  kimi-overnight-goal.md  kimi-overnight-prompt.md  kimi-phase1-prompt.md  kimi-phase1b-prompt.md  kimi-phase2-prompt.md  kimi-phase3-prompt.md  (+12 more)
go/: .golangci.yml  go.mod
rust/cambium/: Cargo.toml
rust/cambium-cli/: Cargo.toml
rust/cambium-cli/src/: main.rs
rust/cambium-codegen/: Cargo.toml
rust/cambium-codegen/src/: fallback.rs  lib.rs
rust/cambium-codegen/tests/: codegen_order_demo.rs  codegen_v1.rs  codegen_v2.rs  compile_fail.rs
rust/cambium-codegen/tests/compile-fail/: _generated_user_ordered_vec.rs  user_ordered_vec_no_index_mut.rs  user_ordered_vec_no_index_mut.stderr  user_ordered_vec_no_push.rs  user_ordered_vec_no_push.stderr  user_ordered_vec_no_swap.rs  user_ordered_vec_no_swap.stderr
rust/cambium-core/: Cargo.toml
rust/cambium-core/src/: context.rs  error.rs  lib.rs  list.rs  schema.rs  sys_consts.rs  tree.rs
rust/cambium-core/tests/: compile_fail.rs  context_loading.rs  data_crud.rs  data_read.rs  data_validation.rs  decimal64.rs  diff.rs  diff_apply_merge.rs  duplicate.rs  json_ietf.rs  json_order.rs  keys_first.rs  lyb_round_trip.rs  ordered_user.rs  parse_mode.rs  rpc_order.rs  rule_codes.rs  schema_introspection.rs  schema_order.rs  schema_tree_order.rs  serialize_flags.rs  system_ordered.rs  user_ordered_list.rs  user_ordered_read.rs
rust/cambium-core/tests/compile-fail/: user_ordered_leaf_list_no_set.rs  user_ordered_leaf_list_no_set.stderr  user_ordered_list_no_set.rs  user_ordered_list_no_set.stderr
rust/cambium-libyang-sys/: Cargo.toml  build.rs
rust/cambium-libyang-sys/src/: adapter.rs  bindings.rs  lib.rs  wrappers.c
rust/cambium-libyang-sys/tests/: schema_order.rs  value_access.rs
rust/cambium/src/: lib.rs
rust/conformance-runner/: Cargo.toml  build.rs
rust/conformance-runner/src/: main.rs
rust/conformance-runner/tests/: run.rs
scripts/: check-flattened-build.sh  check-go-default-pure.sh  check-release-tags.sh  conformance-tool.py  conformance_lib.py  diff-engine-config.sh  generate-theme1.py  generate-theme10.py  generate-theme11.py  generate-theme12.py  generate-theme13.py  generate-theme14.py  generate-theme2.py  generate-theme3.py  generate-theme4.py  generate-theme5.py  generate-theme6.py  generate-theme7.py  generate-theme8.py  generate-theme9.py  (+3 more)
(+936 files in other folders)
