[package]
name = "cambium-cli"
description = "Cambium command-line interface."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[[bin]]
name = "cambium"
path = "src/main.rs"

[dependencies]
cambium = { path = "../cambium" }

[lints]
workspace = true
