[package]
name = "cambium-codegen"
description = "YANG → typed Rust/Go struct code generator (deterministic, order-correct)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cambium-core = { path = "../cambium-core" }
thiserror = "1.0"

[dev-dependencies]
trybuild = { version = "1.0", features = ["diff"] }

[lints]
workspace = true
