[package]
name = "cambium-libyang-sys"
description = "Low-level FFI to the vendored libyang + PCRE2 C engine (internal)."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
links = "yang"
build = "build.rs"

[features]
default = ["bundled"]
bundled = []
system = []

[dependencies]
libc = "0.2"

[dev-dependencies]
libc = "0.2"

[build-dependencies]
cc = "1.2"
cmake = "0.1"

[package.metadata.docs.rs]
features = ["bundled"]
rustdoc-args = ["--cfg", "docsrs"]
