[package]
name = "conformance-runner"
description = "Rust runner for the shared /conformance corpus."
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true

[dependencies]
cambium = { path = "../cambium" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

[lints]
workspace = true
